[package]
name = "connect_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epee-encoding = { version = "0.5.0", features = ["derive"] }
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.7"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive", "std"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["net", "full"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "v5"] }
